--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 * {
   margin: 0;
@@ -13,7 +13,8 @@ nav {
   width: 100vw;
   position: fixed;
   background-color: rgb(27, 27, 27);
-  display: flex;
+  display:inline-flex;
+  text-align: center;
   align-items: center;
   justify-content: space-around;
   box-shadow: 0px 0px 28px -4px rgba(0, 0, 0, 0.75);
@@ -34,10 +35,11 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 li {
   list-style: none;
+  display:inline-block;
 }
 section {
   width: 100vw;
@@ -46,12 +48,25 @@ section {
 .home {
   background-color: rgb(77, 80, 80);
   padding-top: 60px;
+  display: inline-flex;
+  justify-content: center;
+}
+.home img {
+  width: 900px;
+  height: 600px;
+  border: solid;
+  border-radius: 12px;
+
+}
+.home img hr {
+  display: block;
 }
 .about {
   background-color: rgb(77, 80, 80);
   display: flex;
   justify-content: center;
   align-items: center;
+  border-top: #000000;
 }
 .work{
     background-color: rgb(77, 80, 80);
@@ -106,4 +121,7 @@ hr.rounded {
 .myButton:active {
 	position:relative;
 	top:1px;
+}
+.home h1 {
+  font-weight: bold;
 }
